# TriCore

./: .gitignore  Binary VS Ternary.py  Decimal to Ternary convertery.py  LICENSE  READ.ME  README.ME  README.md  Ternary.py  Ternary_to_Decimal_Converter.py  config.py  exceptions.py  logging_config.py  main.py  pyproject.toml
arithmetic/: __init__.py  addition.py  borrow.py  carry.py  division.py  explanation.py  formatter.py  multiplication.py  subtraction.py  utils.py
converters/: __init__.py  balanced_ternary.py  binary_vs_ternary.py  decimal_to_ternary.py  ternary_to_decimal.py
digital_logic/: __init__.py  expressions.py  formatter.py  lessons.py  logic_gates.py  simulator.py  truth_tables.py  utils.py  validation.py
learn_center/: curriculum.py  learn_center.py  types.py
learn_center/content/: __init__.py  architecture.py  arithmetic.py  conversion.py  digital_logic.py  enrichment.py  extras.py  foundations.py  representation.py  simulator.py
logic_circuit_simulator/: __init__.py  builder.py  circuit.py  components.py  evaluator.py  examples.py  formatter.py  lessons.py  simulator.py  validation.py
tests/: test_arithmetic_engine.py  test_balanced_ternary.py  test_circuit_simulator.py  test_converters.py  test_digital_logic.py  test_exceptions.py  test_learning_center.py
ui/: __init__.py  terminal.py
